--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,9 @@ body > input[type="radio"] {
 
 .first-menu {
   display: inline-block; 
-  padding:  0;
+  padding:  10;
+  padding-left: 0;
+  padding-right: 0;
   margin: 0; 
   padding-bottom: 20px;
  }
@@ -117,19 +119,25 @@ body > input[type="radio"] {
   border-radius: 20px;
 }
 
+.active:hover > .menu-link {
+ padding: 10px;
+} 
+
 .active > a{
   box-sizing: border-box;
   background: #f26843;
   background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
   background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
   color: #323232;
-  padding: 8px 10px;
+  padding: 10px;
+  
   margin: 0;
   border-radius: 20px;
 }
 
 .active {
   border: none;
+  
 }
 
 .main-navigation .sub-menu {
@@ -217,6 +225,8 @@ body > input[type="radio"] {
   width: 32px;
   height: 32px;
   border-radius: 50%;
+}
+.active-user-block {
 }
 
 .user-block .user-search::before {
@@ -1102,7 +1112,7 @@ main {
   box-sizing: border-box;
   font-size: 16px;
   line-height: 22px;
-  background: url("../img/strawberry_bg.jpg") no-repeat 0 0;
+  background: #ffffff url("../img/strawberry_bg.jpg") no-repeat 0 0;
   max-width: 560px;
   min-height: 220px;
   color: #323232;
@@ -1643,7 +1653,7 @@ main {
 }
 
 .range-controls .bar {
-  width: 70%;
+  width: 90%;
   height: 2px;
   background: #ffffff;
   margin-left: 25%; 
@@ -1667,11 +1677,7 @@ main {
 }
 
 .range-controls .toggle-max {
-  left: 95px;
-}
-
-.price-controls {
-  font-size: 0;
+  left: 105px;
 }
 
 .min-price
@@ -1696,13 +1702,13 @@ main {
 .min-price {
   position: absolute;
   top: -35px;
-  left: 45px;
+  left: 35px;
 }
 
 .max-price {
   position: absolute;
   top: -35px;
-  left: 105px;
+  left: 115px;
 }
 
 .sort-price {
@@ -1810,9 +1816,9 @@ main {
    position: absolute;
    display: none ;
    top: -1px;
-   left: -30px;
-   width: 10px;
-   height: 10px;
+   left: -28px;
+   width: 8px;
+   height: 8px;
    border: 2px solid #ffffff;
    border-left-color: transparent;
    border-top-color: transparent;
@@ -1838,7 +1844,7 @@ main {
 
 .btn-sort {
   color: #ffffff;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0.2);
   padding: 7px 20px;
   border: 2px solid #ffffff;
   border-radius: 20px;
@@ -1847,7 +1853,7 @@ main {
 
 .btn-sort:hover {
   color: #323232;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .btn-sort:active {
@@ -1885,8 +1891,8 @@ main {
   text-decoration: none;
   border:solid 1px transparent;
   margin-right:10px;
-  padding-right: 5px;
-  padding-left: 5px;
+  padding-right: 6px;
+  padding-left: 6px;
   border-radius: 50%;
    color: #ffffff;
 }
@@ -1927,7 +1933,7 @@ main {
 
 .number:hover {
   background-color: #9db1a5;
-  color: #323232;
+ 
 }
 
 
